--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,13 +1,11 @@
-# Laravel 11 要件を満たす
+# Laravel 11 に合わせて 8.2
 FROM php:8.2-fpm
 
-# php.ini を反映（ファイル名 php.ini のままでOK）
-COPY php.ini /usr/local/etc/php/php.ini
+COPY php.ini /usr/local/etc/php/
 
-# 必要パッケージ & PHP拡張
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends \
-	mariadb-client \
+	default-mysql-client \
 	zlib1g-dev \
 	libzip-dev \
 	libonig-dev \
@@ -15,7 +13,7 @@ RUN apt-get update \
 	&& docker-php-ext-install pdo_mysql zip mbstring \
 	&& rm -rf /var/lib/apt/lists/*
 
-# Composerは公式イメージからコピー（速くて安全）
-COPY --from=composer:2 /usr/bin/composer /usr/local/bin/composer
+RUN curl -sS https://getcomposer.org/installer | php \
+	&& mv composer.phar /usr/local/bin/composer
 
 WORKDIR /var/www
