fix: set php service user to 1000:1000 to avoid permission issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     volumes:
       - ./src:/var/www/
     user: "${UID:-1000}:${GID:-1000}"
+    environment:
+      - UID=${UID:-1000}                 # （任意）中でも参照できるようにしておく
+      - GID=${GID:-1000}
 
   mysql:
     image: mysql:8.0.26      # 以前8.0.43系のデータが残ってるなら 8.0.43 に上げるか data初期化
